Changelog
=========

1.0.4 (unreleased)
------------------

- Nothing changed yet.


1.0.3 (2013-08-27)
------------------

- Nothing changed yet.


1.0.2 (2013-08-27)
------------------

- Fixed getting image scales.
  [thomasdesvenain]

- Plone 4.3 compatibility.
  [thomasdesvenain]


1.0.1 (2011-12-22)
------------------

- Export FSImage in pdf.
  [vincentfretin]

- Fixed recoding of windows apostroph and '...' character.
  [vincentfretin]

- Synced atevent.pt with latest event_view.pt template from Products.CMFPlone
  so the messages are translated properly.
  [vincentfretin]

- Avoid site error at conversion when img tag has no src attribute...
  [thomasdesvenain]


1.0.0 (2011-09-22)
------------------

* Image is not exported if user has not the right to View it.
  [thomasdesvenain]

* Image export works with images referenced with a size.
  Image is printed with the good size.
  [thomasdesvenain]

* Disable export link in portal factory.
  [thomasdesvenain]

* Avoid failures on viewlet kss updates.
  [thomasdesvenain]

* Image export works with image custom types and blob images.
  So image export now works under Plone 4.
  [thomasdesvenain]

* Plone 4.1 compatibility.
  [thomasdesvenain]

1.0.0b1
-------

* i18nisation and added french translation
  [glenfant]
* Unit tests
  [glenfant]
* Cleaned up useless code from Products.PDFBook
  [glenfant]

1.0.0a1
-------

- Initial release
  [glenfant]